# layer-modeller

./: .gitignore  CMakeLists.txt  README.md  add_region.bat  borehole_kovago.json  vcpkg.json
app/: CMakeLists.txt  application.cpp  main.cpp
app/src/: app.cpp  mainwindow.cpp  mainwindow.h
blur/: CMakeLists.txt
blur/include/blur/: blur.h
client/: CMakeLists.txt
client/include/: client.h  zip-handler.h
client/src/: client.cpp  zip-handler.cpp
cmake/: update_submodules.cmake
common/: CMakeLists.txt
common/include/: logging.h
common/include/common-includes/: cgal.h  vtk.h
common/include/converters/: cgal_to_vtk_converter.h
common/include/models/: layer.h  lithologyData.h  lithology_data.h  mesh.h  point.h
common/src/: cgal_to_vtk_converter.cpp  logging.cpp
common/src/common-includes/: cgal.cpp  vtk.cpp
geo-tiff/: CMakeLists.txt
geo-tiff/include/: geotiff_handler.h
geo-tiff/include/blur/: blur.h
geo-tiff/include/tiff/: tiff.h
geo-tiff/src/: blur.cu  cuda_utils.h  geotiff_handler.cpp
geo-tiff/src/blur/: blur.cpp  blur.cu
interpolations/Cserkúti és Tótvári Tagozat összevontan/: empirical_data.txt  theoretical_data.txt  variogram.plt
interpolations/Holocén üledékek általában/: empirical_data.txt  theoretical_data.txt  variogram.plt
interpolations/Jakabhegyi Homokkő Formáció/: empirical_data.txt  theoretical_data.txt  variogram.plt
interpolations/Kővágótöttösi Homokkő Tagozat/: empirical_data.txt  theoretical_data.txt  variogram.plt
interpolator/: CMakeLists.txt
interpolator/include/: initialization.h  interpolator.h  kriging_cpu.h  kriging_gpu.cuh  kriging_utilities.cuh  lu_decomposition.cuh  models.h  plotting.h  variogram.cuh  variogram.h
interpolator/src/: borehole_data.json  cmake_install.cmake  initialization.cpp  initialization.h  interpolator.cpp  kernel.cu  kriging_cpu.cpp  kriging_gpu.cu  kriging_utilities.cu  lu_decomposition.cu  plotting.cpp  variogram.cpp  variogram.cu
layer-builder/: CMakeLists.txt
layer-builder/include/: layer_builder.h
layer-builder/src/: layer_builder.cpp
mesh-generator/: CMakeLists.txt
mesh-generator/include/modeller/: modeller_set.h
mesh-generator/src/modeller/: modeller_set.cpp
normalization/: CMakeLists.txt
normalization/include/: layer_normalizer.h  normalizer.h
normalization/src/: layer_normalizer.cpp  normalizer.cpp
renderer/: CMakeLists.txt
renderer/include/: cgal_to_vtk_converter.h  delaunay_renderer.h  render_settings.h  renderer.h
renderer/src/: cgal_to_vtk_converter.cpp  delaunay_renderer.cpp  renderer.cpp
res/blurred/: sample1_dem_blurred.tif  sample1_dem_blurred.tif.aux.xml
res/boreholes/: borehole_data.json  borehole_kovago.json
res/points/: interpolated_points.txt
res/tiff/: sample1_dem.tif.aux.xml  sample2_dem.tif.aux.xml  sample3_dem.tif.aux.xml
shp-generator/: CMakeLists.txt
shp-generator/include/: shp_generator.h
shp-generator/src/: shp_generator.cpp
src/: cgal_to_vtk_converter.cpp  cgal_to_vtk_converter.h  source.cpp
src/point/: point.h
src/triangulation-renderer/: render_settings.h  triangulation_renderer.cpp  triangulation_renderer.h
tests/: CMakeLists.txt
tiff-blur/: CMakeLists.txt
tiff-blur/include/blur/: blur.h
tiff-blur/src/: blur.cpp
tri-mesh-gen/: CMakeLists.txt
tri-mesh-gen/include/triangulation/: delaunay.h
tri-mesh-gen/src/triangulation/: delaunay.cpp
